<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyInfoActivity"
    android:background="@drawable/gradient">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:layout_marginTop="16sp"
                android:gravity="center_horizontal"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textSize="30sp"
                android:id="@+id/info_title_view"
                android:textColor="@color/colorText2"
                android:text="@string/title_my_info_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info_title_view"
                android:layout_margin="8sp"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                android:id="@+id/info_section_view1"
                android:textColor="@color/colorText2"
                android:textStyle="italic"
                android:text="@string/sex_text"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_section_view1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16sp"
                android:id="@+id/radio_group">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/female_text"
                    android:textColor="@color/colorText"
                    android:textColorHighlight="@color/colorAccent2"
                    android:id="@+id/radio_female" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/male_text"
                    android:textColor="@color/colorText"
                    android:textColorHighlight="@color/colorAccent2"
                    android:id="@+id/radio_male"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/other_text"
                    android:textColor="@color/colorText"
                    android:textColorHighlight="@color/colorAccent2"
                    android:id="@+id/radio_other"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radio_group"
                android:layout_margin="8sp"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                android:id="@+id/info_section_view2"
                android:text="@string/weight_text"
                android:textStyle="italic"
                android:textColor="@color/colorText2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/info_section_view2"
                android:layout_marginBottom="16sp"
                android:id="@+id/weight_layout">

                <EditText
                    android:id="@+id/weight_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="16sp"
                    android:ems="10"
                    android:hint="135.5"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText2"
                    android:gravity="center_horizontal"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/my_info_units"
                    android:id="@+id/unit_select"/>

            </LinearLayout>
            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight_layout"
                android:layout_centerHorizontal="true"
                android:layout_margin="16sp"
                android:text="@string/my_info_save_text"
                android:backgroundTint="@color/colorAccent2"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>