<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="0dp"
        android:layout_marginBottom="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/title_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="16sp"
                android:text="@string/title_faq_text"
                android:textSize="30sp"
                android:layout_marginBottom="16sp"
                android:textColor="@color/colorText2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12sp"
                android:clickable="true"
                android:id="@+id/section1">
                <TextView
                    android:id="@+id/title_text_1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="22sp"
                    android:textColor="@color/colorText"
                    android:textStyle="italic"
                    android:text="@string/subtitle_text1" />
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:id="@+id/button_section1"
                    android:background="@drawable/spilled_cup_icon"
                    android:backgroundTint="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:layout_marginBottom="16sp"
                android:visibility="gone"
                android:id="@+id/section1_content">

                <ImageView
                    android:layout_width="36sp"
                    android:layout_height="36sp"
                    android:src="@drawable/cup_icon"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/colorAccent2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginRight="16sp"
                    android:text="@string/x1"
                    android:textColor="@color/colorAccent2"/>
                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/colorText2"
                    android:text="@string/content_one_drink"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12sp"
                android:id="@+id/section2"
                android:clickable="true">
                <TextView
                    android:id="@+id/title_text_2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorText"
                    android:text="@string/subtitle_text2"/>
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:id="@+id/button_section2"
                    android:backgroundTint="@color/colorAccent"
                    android:background="@drawable/spilled_cup_icon"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/section2_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:id="@+id/single_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText2"
                        android:text="@string/content_single"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>
                    <ImageView
                        android:layout_width="36sp"
                        android:layout_height="36sp"
                        android:src="@drawable/cup_icon"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/colorAccent2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent2"
                        android:text="@string/x1"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:id="@+id/double_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText2"
                        android:text="@string/content_double"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>
                    <ImageView
                        android:layout_width="36sp"
                        android:layout_height="36sp"
                        android:src="@drawable/cup_icon"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/colorAccent2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent2"
                        android:text="@string/x2"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:id="@+id/triple_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_triple"
                        android:textColor="@color/colorText2"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>
                    <ImageView
                        android:layout_width="36sp"
                        android:layout_height="36sp"
                        android:src="@drawable/cup_icon"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/colorAccent2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent2"
                        android:text="@string/x3"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12sp"
                android:layout_marginTop="16sp"
                android:id="@+id/section3"
                android:clickable="true">
                <TextView
                    android:id="@+id/title_text_3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorText"
                    android:text="@string/subtitle_text3" />
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:id="@+id/button_section3"
                    android:backgroundTint="@color/colorAccent"
                    android:background="@drawable/spilled_cup_icon"/>
            </LinearLayout>

            <TextView
                android:id="@+id/section3_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorText2"
                android:text="@string/content_feeling"
                android:layout_margin="8sp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12sp"
                android:clickable="true"
                android:id="@+id/section4">
                <TextView
                    android:id="@+id/title_text_4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorText"
                    android:text="@string/subtitle_text4"
                    android:layout_marginTop="16sp"/>
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:id="@+id/button_section4"
                    android:backgroundTint="@color/colorAccent"
                    android:background="@drawable/spilled_cup_icon"/>
            </LinearLayout>

            <TextView
                android:id="@+id/section4_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorText2"
                android:text="@string/content_laws"
                android:layout_margin="8sp"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>